--- a/index.html
+++ b/index.html
@@ -241,25 +241,25 @@
                 <div class="fact-group d-flex gap-3 gap-lg-0 flex-column flex-md-row justify-content-between flex-lg-column flex-md-wrap ">
 
                   <div class="fact-item  bg-white position-relative shadow rounded-2 text-center text-lg-start p-30 ms-lg-auto z-1">
-                    <div class="fact-icon top-right"><img src="./images/happy-client-icon.svg" alt=""></div>
+                    <div class="fact-icon top-right"><img src="./images/happy-client-icon.svg" alt="happy client icon"></div>
                     <div class="h1 text-neutral-800 fw-bold mt-3 mt-lg-0">84</div>
                     <div class="fact-text fs-4 text-neutral-500 ">Happy Clients</div>
                   </div>
 
                   <div class="fact-item  bg-white position-relative shadow rounded-2 text-center text-lg-start p-30 mt-lg-n60">
-                    <div class="fact-icon top-left"><img src="./images/project-complete-icon.svg" alt=""></div>
+                    <div class="fact-icon top-left"><img src="./images/project-complete-icon.svg" alt="project complete icon"></div>
                     <div class="h1 text-neutral-800 fw-bold mt-3 mt-lg-0">123</div>
                     <div class="fact-text fs-4 text-neutral-500 ">Projects Completed</div>
                   </div>
 
                   <div class="fact-item bg-white position-relative shadow rounded-2 text-center text-lg-start p-30 ms-lg-auto me-lg-76 mt-lg-n3 z-1">
-                    <div class="fact-icon top-right"><img src="./images/award-win-icon.svg" alt=""></div>
+                    <div class="fact-icon top-right"><img src="./images/award-win-icon.svg" alt="award win icon"></div>
                     <div class="h1 text-neutral-800 fw-bold mt-3 mt-lg-0">37</div>
                     <div class="fact-text fs-4 text-neutral-500 ">Awards Win</div>
                   </div>
 
                   <div class="fact-item bg-white position-relative shadow rounded-2 text-center text-lg-start p-30 ms-lg-50 mt-lg-n50">
-                    <div class="fact-icon bottom-right"><img src="./images/years-in-business-icon.svg" alt=""></div>
+                    <div class="fact-icon bottom-right"><img src="./images/years-in-business-icon.svg" alt="years in business icon"></div>
                     <div class="h1 text-neutral-800 fw-bold mt-3 mt-lg-0">30</div>
                     <div class="fact-text fs-4 text-neutral-500 ">Years in Business</div>
                   </div>
