bottom logo wraping in anchor tag

--- a/index.html
+++ b/index.html
@@ -830,9 +830,9 @@
                 <p class="fs-5 text-neutral-800 text-center my-0">hello@thebox.com</p>
               </div>
             </address>
-            <div class="logo d-flex justify-content-center justify-content-lg-start my-3">
+            <a href="#" class="logo d-flex justify-content-center justify-content-lg-start my-3">
               <img src="./images/logo.svg" alt="">
-            </div>
+            </a>
           </div>
 
           <div class="col-lg-4">
